@@ -3,17 +3,14 @@ package edu.colorado.phet.energyskatepark;
 
 import java.awt.Frame;
 import java.awt.Toolkit;
-import java.awt.geom.Point2D;
 
 import javax.swing.JOptionPane;
 
-import edu.colorado.phet.common.phetcommon.math.SerializablePoint2D;
 import edu.colorado.phet.common.phetcommon.model.BaseModel;
 import edu.colorado.phet.common.phetcommon.model.clock.ConstantDtClock;
 import edu.colorado.phet.common.phetcommon.view.PhetFrame;
 import edu.colorado.phet.common.phetcommon.view.util.PhetOptionPane;
 import edu.colorado.phet.common.piccolophet.PiccoloModule;
-import edu.colorado.phet.common.piccolophet.help.HelpBalloon;
 import edu.colorado.phet.common.timeseries.model.TimeSeriesModel;
 import edu.colorado.phet.energyskatepark.model.Body;
 import edu.colorado.phet.energyskatepark.model.EnergySkateParkModel;
@@ -31,8 +28,6 @@ import edu.colorado.phet.energyskatepark.view.SkaterCharacter;
 import edu.colorado.phet.energyskatepark.view.SkaterCharacterSet;
 import edu.colorado.phet.energyskatepark.view.WiggleMeInSpace;
 import edu.colorado.phet.energyskatepark.view.swing.EnergySkateParkTimePanel;
-import edu.umd.cs.piccolo.PCanvas;
-import edu.umd.cs.piccolo.PNode;
 
 /**
  * Base class used by both the main version and basic versions of Energy Skate Park.
@@ -40,8 +35,8 @@ import edu.umd.cs.piccolo.PNode;
  * @author Sam Reid
  */
 public abstract class AbstractEnergySkateParkModule extends PiccoloModule {
-    private final EnergySkateParkModel energyModel;
-    private final EnergySkateParkSimulationPanel energySkateParkSimulationPanel;
+    public final EnergySkateParkModel energyModel;
+    public final EnergySkateParkSimulationPanel energySkateParkSimulationPanel;
     private final EnergyLookAndFeel energyLookAndFeel = new EnergyLookAndFeel();
     private final BarChartDialog barChartDialog;
     private final double floorY = 0.0;
@@ -98,52 +93,6 @@ public abstract class AbstractEnergySkateParkModule extends PiccoloModule {
         setDefaults();
         setLogoPanelVisible( false );
         new WiggleMeInSpace( this ).start();
-
-        final HelpBalloon trackHelp = new HelpBalloon( getDefaultHelpPane(), EnergySkateParkStrings.getString( "help.grab-a-track" ), HelpBalloon.TOP_CENTER, 20 );
-        getDefaultHelpPane().add( trackHelp );
-        trackHelp.pointAt( energySkateParkSimulationPanel.getRootNode().getSplineToolbox(), energySkateParkSimulationPanel );
-
-        final HelpBalloon skateHelp = new HelpBalloon( getDefaultHelpPane(), EnergySkateParkStrings.getString( "help.drag-the-skater" ), HelpBalloon.RIGHT_CENTER, 20 ) {
-            public Point2D mapLocation( PNode node, PCanvas canvas ) {
-                if ( node == null || node.getParent() == null ) {
-                    return new Point2D.Double( 0, 0 );
-                }
-                else {
-                    return super.mapLocation( node, canvas );
-                }
-            }
-        };
-        getDefaultHelpPane().add( skateHelp );
-        skateHelp.pointAt( energySkateParkSimulationPanel.getRootNode().getSkaterNode( 0 ), energySkateParkSimulationPanel );
-        energyModel.addEnergyModelListener( new EnergySkateParkModel.EnergyModelListenerAdapter() {
-            public void bodyCountChanged() {
-                if ( energySkateParkSimulationPanel.getRootNode().numBodyGraphics() > 0 ) {
-                    skateHelp.pointAt( energySkateParkSimulationPanel.getRootNode().getSkaterNode( 0 ), energySkateParkSimulationPanel );
-                }
-            }
-        } );
-
-        final HelpBalloon trackClickHelp = new HelpBalloon( getDefaultHelpPane(), EnergySkateParkStrings.getString( "help.right-click-for-options" ), HelpBalloon.BOTTOM_CENTER, 20 );
-        getDefaultHelpPane().add( trackClickHelp );
-        trackClickHelp.pointAt( 0, 0 );
-        energyModel.addEnergyModelListener( new EnergySkateParkModel.EnergyModelListenerAdapter() {
-            public void preStep() {//todo: won't update while paused
-                if ( energyModel.getNumSplines() > 0 && isHelpEnabled() ) {
-                    trackHelp.setVisible( isHelpEnabled() );
-                    SerializablePoint2D pt = energyModel.getSpline( 0 ).getParametricFunction2D().evaluate( 0.25 );
-                    Point2D w = new Point2D.Double( pt.getX(), pt.getY() );
-                    energySkateParkSimulationPanel.getRootNode().worldToScreen( w );
-                    trackClickHelp.pointAt( w );
-                }
-                else {
-                    trackHelp.setVisible( false );
-                }
-            }
-        } );
-    }
-
-    public boolean hasHelp() {
-        return true;
     }
 
     private void setDefaults() {
